--- a/ws/humble/humble_nogpu/devcontainer-template.json
+++ b/ws/humble/humble_nogpu/devcontainer-template.json
@@ -1,5 +1,5 @@
 {
-    "id": "humble_nogpu",
+    "id": "roboten_ws_humble_nogpu",
     "version": "1.0.2",
     "name": "ROS2 Humble Devcontainer Workspace Template",
     "description": "A template to code robots using ROS2 Humble Distribution",
