Feat: Upgrade Humble and Noetic Templates

--- a/ws/humble/humble_nogpu/devcontainer-template.json
+++ b/ws/humble/humble_nogpu/devcontainer-template.json
@@ -1,6 +1,6 @@
 {
-    "id": "roboten_ws_humble_nogpu",
-    "version": "1.1.0",
+    "id": "robot_ws_humble_nogpu",
+    "version": "1.2.0",
     "name": "ROS2 Humble Devcontainer Workspace Template",
     "description": "A template to code robots using ROS2 Humble Distribution",
     "documentationUrl": "https://juancsucoder.github.io/flatboat-docs/",
