--- a/ws/iron/iron_nogpu/devcontainer-template.json
+++ b/ws/iron/iron_nogpu/devcontainer-template.json
@@ -1,5 +1,5 @@
 {
-    "id": "roboten_ws_iron_nogpu",
+    "id": "robot_ws_iron_nogpu",
     "version": "2.0.1",
     "name": "ROS2 Iron Irwini Devcontainer Workspace Template",
     "description": "A template to code robots using ROS2 Iron Irwini Distribution",
