--- a/templates/iron_nogpu.toml
+++ b/templates/iron_nogpu.toml
@@ -2,7 +2,7 @@ name = "iron_nogpu"
 version = "0.0.1"
 
 [artifacts]
-workspace = "ghcr.io/JuanCSUCoder/flatboat-templates/roboten_ws_humble_nogpu"
-package = "JuanCSUCoder/flatboat-templates/pkg/humble/humble_nogpu"
-workload = "JuanCSUCoder/flatboat-templates/wl/humble/humble_nogpu"
-bot = "JuanCSUCoder/flatboat-templates/bot/humble/humble_nogpu"
+workspace = "ghcr.io/JuanCSUCoder/flatboat-templates/robot_ws_iron_nogpu"
+package = "https://juancsucoder.github.io/flatboat-docs#NotImplemented"
+workload = "https://juancsucoder.github.io/flatboat-docs#NotImplemented"
+bot = "https://juancsucoder.github.io/flatboat-docs#NotImplemented"
