Feat: Use string literal

--- a/pkg/humble/humble_nogpu/pkg.toml
+++ b/pkg/humble/humble_nogpu/pkg.toml
@@ -3,4 +3,4 @@ package_name = "example_package"
 system_dependencies = []
 launch_file = "move_launch.py"
 # command_file = "move_run.py"
-# extra_args = "\"--left\", \"30\""
+# extra_args = '"--left", "30"'
