--- a/templates/humble_nogpu.toml
+++ b/templates/humble_nogpu.toml
@@ -2,7 +2,7 @@ name = "humble_nogpu"
 version = "1.2.1"
 
 [artifacts]
-workspace = "ghcr.io/JuanCSUCoder/flatboat-templates/robot_ws_humble_nogpu:1.2.1"
+workspace = "ghcr.io/JuanCSUCoder/flatboat-templates/robot_ws_humble_nogpu"
 package = "ghcr.io/juancsucoder/flatboat-templates/robot_pkg_humble_nogpu:1.2.1"
 workload = "ghcr.io/juancsucoder/flatboat-templates/robot_wl_humble:1.2.1"
 bot = "https://juancsucoder.github.io/flatboat-docs#NotImplemented"
