Update: Jazzy docs

--- a/ws/jazzy/jazzy_nogpu/devcontainer-template.json
+++ b/ws/jazzy/jazzy_nogpu/devcontainer-template.json
@@ -1,8 +1,8 @@
 {
-    "id": "robot_ws_humble_nogpu",
+    "id": "robot_ws_jazzy_nogpu",
     "version": "1.2.0",
-    "name": "ROS2 Humble Devcontainer Workspace Template",
-    "description": "A template to code robots using ROS2 Humble Distribution",
+    "name": "ROS2 Jazzy Devcontainer Workspace Template",
+    "description": "A template to code robots using ROS2 Jazzy Distribution",
     "documentationUrl": "https://juancsucoder.github.io/flatboat-docs/",
     "publisher": "Juan Camilo Sánchez Urrego",
     "licenseURL": "https://github.com/JuanCSUCoder/flatboat-templates/blob/main/LICENSE",
